fixed top spacing

--- a/src/components/CompactMenu/style.css
+++ b/src/components/CompactMenu/style.css
@@ -3,7 +3,7 @@
   height: 133px;
   left: 48px;
   position: absolute;
-  top: 80px;
+  top: 30px;
   width: 306px;
 }
 
