--- a/src/screens/MainPageMobile/style.css
+++ b/src/screens/MainPageMobile/style.css
@@ -263,7 +263,7 @@
     /* left: calc(100%-200px); */
     left: 48px;
     position: absolute;
-    top: 263px;
+    top: 213px;
     width: 306px;
   }
   
@@ -317,7 +317,7 @@
     height: 334px;
     left: 48px;
     position: absolute;
-    top: 421px;
+    top: 371px;
     width: 283px;
   }
   
